Set line-height in article tag & Fix overflow bug

--- a/assets/css/components/article.sass
+++ b/assets/css/components/article.sass
@@ -1,5 +1,7 @@
 
 article
+  line-height: 1.7
+
   *:first-child
     @apply mt-0
 
