--- a/assets/css/site.sass
+++ b/assets/css/site.sass
@@ -4,7 +4,6 @@
 
 html
   font-size: 18px
-  line-height: 1.7
 
 @import "components/content"
 @import "components/article"
